# VoiceSphereBackend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  schema.cql
k8s/: deployment.yaml  scylla-service.yaml  scylla-statefulset.yaml  service.yaml
migrations/: add_comment_count.cql  add_comment_reactions.cql  add_topic_reactions.cql
schema/: chat_history.cql  comments.cql  feed_counts.cql  feeds.cql  reactions.cql  schema.cql  social.cql  user_stats.cql
src/: add_reaction.rs  chat_server.rs  lib.rs  main.rs  old-main.rs
src/config/: app_config.rs  database.rs  mod.rs
src/database/: chat_db.rs  comments_db.rs  feed_db.rs  mod.rs  reaction_db.rs  user_db.rs
src/errors/: app_error.rs  constants.rs  mod.rs
src/handlers/: auth.rs  chat.rs  comments.rs  feed.rs  mod.rs  profile.rs  reactions.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/models/: chat.rs  comment.rs  feed.rs  mod.rs  reaction.rs  user.rs
src/services/: chat_service.rs  feed_service.rs  mod.rs  reaction_service.rs  user_service.rs
src/state/: mod.rs
src/utils/: authenticate.rs  mod.rs  response.rs
src/websocket/: handlers.rs  message.rs  mod.rs
