[package]
name = "voicesphere_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
scylla = { version = "0.14", features = ["full-serialization"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5"
jsonwebtoken = "9.0"
reqwest = { version = "0.13.1", features = ["json"] }
dotenvy = "0.15"
http = "1.4.0"
